# SpaceWarSupreme

./: .gitignore  Cargo.toml  GameException.cpp  GameException.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  InputModule.cpp  InputModule.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  SpaceWarSupreme.sln  SpaceWarSupreme.vcxproj  SpaceWarSupreme.vcxproj.filters  WindowManager.cpp  WindowManager.h  build.rs  config.ini  config.json  main.cpp  resource.h  stdafx.cpp  stdafx.h  visualize_stars.py  win_msgbox.vbs
other/: sws.pdn
resources/: credits.txt  starnames.txt
resources/localization/: English.json
resources/models/: diegetic_button.mtl  diegetic_panel.mtl  sphere.gltf  testmodel.mtl
scripts/: galaxymap.rhai  mainmenu.rhai  test.rhai
scripts/mapgen/: elliptical.rhai
src/: main.rs
src/audio/: mod.rs
src/config/: mod.rs
src/consts/: mod.rs
src/engine/: audio.rs  camera.rs  config.rs  consts.rs  localization.rs  log.rs  mod.rs  prelude.rs  utils.rs
src/engine/components/: keyboard.rs  mod.rs  mouse.rs  position.rs  scripting.rs  static_mesh.rs  static_skybox.rs  transform.rs
src/engine/graphics/: camera.rs  framebuilder.rs  mod.rs  models.rs  pbr.frag  pbr.vert  renderer.rs  shaders.rs  skybox.rs  textures.rs  vertex.rs  window.rs
src/engine/input/: event_resources.rs  keycode_to_str.rs  mod.rs
src/engine/scripting/: basic_funcs.rs  mod.rs
src/engine/systems/: keyboard.rs  mod.rs  mouse.rs  preload.rs  script_preload.rs  scripting.rs  static_mesh.rs  static_skybox.rs
src/gameplay/: mod.rs  star.rs  stellar_object.rs
src/gameplay/components/: mod.rs  position.rs
src/gameplay/gamestate/: main_menu.rs  mod.rs
src/gameplay/levels/: mod.rs  spacewar.rs
src/gameplay/mapgen/: mod.rs
src/gameplay/types/: mod.rs
src/graphics/: mod.rs  models.rs  renderer.rs  window.rs
src/input/: mod.rs
src/log/: mod.rs
src/scripting/: basic_funcs.rs  interpolate.rs  mod.rs
src/ui/: checkbox.rs  mod.rs
src/utils/: localization.rs  mod.rs
