[package]
name = "space_war_supreme"
version = "1.0.0"
authors = ["Raz Hemo"]
edition = "2018"
build = "build.rs"

[build-dependencies]
winres = "0.1.11"

[dependencies]
chrono = "0.4.10"
rand = "0.7.3"
lazy_static = "1.4.0"
serde_json = "1.0.48"
rhai = {path="../rhai/", features=["sync"]}
image = "0.23.0"
winit = "0.22.0"
vulkano = "0.18.0"
vulkano-win = "0.18.0"
vulkano-shaders = "0.18.0"
winres = "0.1.11"
rodio = "0.10.0"
specs = "0.16.1"
tobj = "1.0.0"
cgmath = "0.17.0"
itertools = "0.9.0"
sanitize-filename = "0.2.1"

#[profile.release]
#lto = true