[package]
name = "space_war_supreme"
version = "1.0.0"
authors = ["Raz Hemo"]
edition = "2018"
build = "build.rs"

[build-dependencies]
winres = "0.1.11"

[dependencies]
chrono = "0.4.11"
rand = "0.7.3"
lazy_static = "1.4.0"
serde = {version="1.0.106", features=["derive"]}
serde_json = "1.0.51"
bincode = "1.2.1"
rhai = {path="../rhai/", features=["sync"]}
image = "0.23.0"
winit = "0.22.0"
glium = "0.27.0"
winres = "0.1.11"
rodio = "0.10.0"
specs = "0.16.1"
tobj = "1.0.0"
nalgebra = "0.21.0"
itertools = "0.9.0"
sanitize-filename = "0.2.1"
rental = "0.5.5"

[profile.release]
opt-level=3
lto = true

[profile.dev]
opt-level=3